--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Explore</title>
-    <link href="/public/vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/index.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"/>    <link href="css/index.css" rel="stylesheet"/>
     <link href="css/explore.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/>
 
