--- a/public/tuiter/ExploreScreen/explore.html
+++ b/public/tuiter/ExploreScreen/explore.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/index.css" rel="stylesheet"/>
+    <link href="/public/vendors/bootstrap/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../css/explore.css" rel="stylesheet">
+    <link href="../css/index.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Explore Screen</title>
 </head>
 <body>
-
+    <div class="container" id="wd-explore"><div class="text-white">TESTING</div></div>
+    <script src="ExploreScreen.js" type="module"></script>
 </body>
 </html>
