a5 working navigation bar explore.js sp22

--- a/public/tuiter/ExploreScreen/explore.html
+++ b/public/tuiter/ExploreScreen/explore.html
@@ -11,7 +11,7 @@
     <title>Explore Screen</title>
 </head>
 <body>
-    <div class="container" id="wd-explore"><div class="text-white">TESTING</div></div>
+    <div class="container" id="wd-explore"></div>
     <script src="ExploreScreen.js" type="module"></script>
 </body>
 </html>
