--- a/public/tuiter/ExploreScreen/explore.html
+++ b/public/tuiter/ExploreScreen/explore.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <title>Explore Screen</title>
 </head>
-<body>
+<body class="bg-black wd-font">
     <div class="container" id="wd-explore"></div>
     <script src="ExploreScreen.js" type="module"></script>
 </body>
