--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Explore</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"/>    <link href="../css/index.css" rel="stylesheet"/>
-    <link href="../css/explore.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"/>    <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/explore.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/>
 
 </head>
@@ -17,31 +17,31 @@
                     <a class="nav-link mb-2" href="#">
                         <i class="fab fa-twitter me-1 p-2 text-white"></i>
                     </a>
-                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="../home.html">
+                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="home.html">
                         <i class="fa fa-home fa-1x me-1 p-2 text-white"></i>
                         <span class="d-none d-xl-block">Home</span>
                     </a>
-                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="explore2.html">
+                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="explore.html">
                         <i class="fa fa-hashtag fa-1x me-2 p-2 text-white" style="-webkit-text-stroke: 1px white;"></i>
                         <span class="d-none d-xl-block fw-bold">Explore</span>
                     </a>
-                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="../notifications.html">
+                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="notifications.html">
                         <i class="fa fa-bell fa-1x me-2 p-2 text-white"></i>
                         <span class="d-none d-xl-block">Notifications</span>
                     </a>
-                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="../messages.html">
+                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="messages.html">
                         <i class="fa fa-envelope fa-1x me-2 p-2 text-white"></i>
                         <span class="d-none d-xl-block">Messages</span>
                     </a>
-                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="../bookmarks.html">
+                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="bookmarks.html">
                         <i class="fa fa-bookmark fa-1x me-2 p-2 text-white"></i>
                         <span class="d-none d-xl-block">Bookmarks</span>
                     </a>
-                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="../lists.html">
+                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="lists.html">
                         <i class="fa fa-list fa-1x me-2 p-2 text-white"></i>
                         <span class="d-none d-xl-block">Lists</span>
                     </a>
-                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="../profile.html">
+                    <a class="nav-link mb-2 text-white d-inline-flex flex-row align-items-center" href="profile.html">
                         <i class="fa fa-user fa-1x me-2 p-2 text-white"></i>
                         <span class="d-none d-xl-block">Profile</span>
                     </a>
@@ -67,7 +67,7 @@
                                     <input type="text" class="wd-search-field wd-rounded-edges wd-font" width="100%" placeholder="Search Tuiter"/>
                                 </span>
                                 <span class="wd-float-right wd-gear-emoji justify-content-center">
-                                    <a class="wd-anchor-underline" href="../explore-settings.html">
+                                    <a class="wd-anchor-underline" href="explore-settings.html">
                                         <i class="fa fa-cog" style="color: white"></i>
                                     </a>
                                 </span>
@@ -76,53 +76,53 @@
                     </div>
                     <ul class="nav nav-tabs text-dark nav-fill" style="border-bottom-color: black">
                         <li class="nav-item">
-                            <a class="nav-link active bg-black text-white fw-bold wd-font" href="../for-you.html">For you</a>
+                            <a class="nav-link active bg-black text-white fw-bold wd-font" href="for-you.html">For you</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link wd-gray wd-font" href="../trending.html">Trending</a>
+                            <a class="nav-link wd-gray wd-font" href="trending.html">Trending</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link wd-gray wd-font" href="covid-19.html">COVID-19</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link wd-gray wd-font" href="../news.html">News</a>
+                            <a class="nav-link wd-gray wd-font" href="news.html">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link wd-gray wd-font d-none d-md-block" href="../sports.html">Sports</a>
+                            <a class="nav-link wd-gray wd-font d-none d-md-block" href="sports.html">Sports</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link wd-gray d-none d-lg-block" href="../entertainment.html">Entertainment</a>
+                            <a class="nav-link wd-gray d-none d-lg-block" href="entertainment.html">Entertainment</a>
                         </li>
                     </ul>
                 </div>
                 <div>
                     <div class="wd-border-style">
                         <div class="container position-relative ps-0 pe-0">
-                            <img width="100%" heigh="500px" src="../images/SpaceX_Starship.jpg">
+                            <img width="100%" heigh="500px" src="images/SpaceX_Starship.jpg">
                             <div class="wd-bottom-left text-white">SpaceX's Starship</div>
                         </div>
                         <div class="overflow-hidden d-flex wd-font-color-gray p-3">
                             <div class="float-start">
                                 <div>Web Development</div>
                                 <span class="text-white fw-bold">ReactJS</span>
-                                <img class="wd-tuit-emoji" src="../images/Twitter_Verified_Badge.svg.png">
+                                <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
                                 <span> - 2h</span>
                                 <div class="text-white fw-bold">React.js is a component based front end library that makes it very easy to build Single Page Applications or SPAs</div>
                             </div>
                             <div class="ms-auto">
-                                <img class="rounded-3 justify-content-center" width="100px" heigh="100px" src="../images/ReactJS.png">
+                                <img class="rounded-3 justify-content-center" width="100px" heigh="100px" src="images/ReactJS.png">
                             </div>
                         </div>
                         <div class="overflow-auto d-flex wd-font-color-gray p-3">
                             <div class="float-start me-2">
                                 <span class="text-white fw-bold">JavaScript</span>
-                                <img class="wd-tuit-emoji" src="../images/Twitter_Verified_Badge.svg.png">
+                                <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
                                 <span> - 2h</span>
                                 <div class="text-white fw-bold">JavaScript is a programming language that can run on browsers as well as desktops</div>
                                 <div>123K Tuits</div>
                             </div>
                             <div class="ms-auto">
-                                <img class="rounded-3" width="100px" heigh="100px" src="../images/JavaScript.png">
+                                <img class="rounded-3" width="100px" heigh="100px" src="images/JavaScript.png">
                             </div>
                         </div>
                         <div class="overflow-auto d-flex wd-font-color-gray p-3">
@@ -132,18 +132,18 @@
                                 <div>123K Tuits</div>
                             </div>
                             <div class="ms-auto">
-                                <img class="rounded-3" width="100px" heigh="100px" src="../images/jquery_logo.png">
+                                <img class="rounded-3" width="100px" heigh="100px" src="images/jquery_logo.png">
                             </div>
                         </div>
                         <div class="overflow-auto d-flex wd-font-color-gray p-3">
                             <div class="float-start me-2">
                                 <div>Web Development</div>
                                 <span class="text-white fw-bold">NodeJS</span>
-                                <img class="wd-tuit-emoji" src="../images/Twitter_Verified_Badge.svg.png">
+                                <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
                                 <div>123K Tuits</div>
                             </div>
                             <div class="ms-auto">
-                                <img class="rounded-3" width="100px" heigh="100px" src="../images/NodeJS_logo.png">
+                                <img class="rounded-3" width="100px" heigh="100px" src="images/NodeJS_logo.png">
                             </div>
                         </div>
                     </div>
@@ -157,12 +157,12 @@
                 </div>
                 <div class="d-flex flex-row mb-4">
                     <div>
-                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="../images/java_logo.png">
+                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="images/java_logo.png">
                     </div>
                     <div class="overflow-visible">
                         <div class="position-absolute">
                         <span class="text-white wd-white-space">Java
-                            <img class="wd-tuit-emoji" src="../images/Twitter_Verified_Badge.svg.png">
+                            <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
                         </span></br>
                             <span class="wd-font-color-gray">@Java</span>
                         </div>
@@ -173,12 +173,12 @@
                 </div>
                 <div class="d-flex flex-row mb-4">
                     <div>
-                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="../images/relativity_space_logo.jfif">
+                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="images/relativity_space_logo.jfif">
                     </div>
                     <div class="overflow-visible">
                         <div class="position-absolute">
                         <span class="text-white wd-white-space">Relativity Space
-                            <img class="wd-tuit-emoji" src="../images/Twitter_Verified_Badge.svg.png">
+                            <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
                         </span></br>
                             <span class="wd-font-color-gray">@relativityspace</span>
                         </div>
@@ -189,12 +189,12 @@
                 </div>
                 <div class="d-flex flex-row mb-4">
                     <div>
-                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="../images/virgin_logo.png">
+                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="images/virgin_logo.png">
                     </div>
                     <div class="overflow-visible">
                         <div style="position: absolute">
                         <span class="text-white wd-white-space">Virgin Galactic
-                            <img class="wd-tuit-emoji" src="../images/Twitter_Verified_Badge.svg.png">
+                            <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
                         </span></br>
                             <span class="wd-font-color-gray">@virgingalactic</span>
                         </div>
@@ -205,12 +205,12 @@
                 </div>
                 <div class="d-flex flex-row mb-4">
                     <div>
-                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="../images/nasa_logo.png">
+                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="images/nasa_logo.png">
                     </div>
                     <div class="overflow-visible">
                         <div class="position-absolute">
                         <span class="text-white wd-white-space">Nasa
-                            <img class="wd-tuit-emoji" src="../images/Twitter_Verified_Badge.svg.png">
+                            <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
                         </span></br>
                             <span class="wd-font-color-gray">@NASA</span>
                         </div>
@@ -221,12 +221,12 @@
                 </div>
                 <div class="d-flex flex-row">
                     <div>
-                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="../images/tesla_logo.png">
+                        <img class="rounded-circle me-xxl-3 me-xl-2 me-lg-0" width="48px" height="48px" src="images/tesla_logo.png">
                     </div>
                     <div class="overflow-visible">
                         <div class="position-absolute">
                         <span class="text-white wd-white-space">Tesla
-                            <img class="wd-tuit-emoji" src="../images/Twitter_Verified_Badge.svg.png">
+                            <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
                         </span></br>
                             <span class="wd-font-color-gray">@Tesla</span>
                         </div>
