--- a/public/index.html
+++ b/public/index.html
@@ -28,15 +28,15 @@
   </head>
   <body>
   <div id="root"></div>
-  <h1>Non React.js Assignments</h1>
-  <ul>
-    <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
-    <li><a href="labs/a3/css/index.html">Assignment 3 Labs</a></li>
-    <li><a href="labs/a3/challenge/index.html">Assignment 3 Challenge</a></li>
-    <li><a href="labs/a4/boostrap/index.html">Assignment 4 Labs</a></li>
-    <li><a href="labs/a5/js/index.html">Assignment 5 Labs</a></li>
-    <li><a href="tuiter/navigation.html">Tuiter</a></li>
-  </ul>
+<!--  <h1>Non React.js Assignments</h1>-->
+<!--  <ul>-->
+<!--    <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>-->
+<!--    <li><a href="labs/a3/css/index.html">Assignment 3 Labs</a></li>-->
+<!--    <li><a href="labs/a3/challenge/index.html">Assignment 3 Challenge</a></li>-->
+<!--    <li><a href="labs/a4/boostrap/index.html">Assignment 4 Labs</a></li>-->
+<!--    <li><a href="labs/a5/js/index.html">Assignment 5 Labs</a></li>-->
+<!--    <li><a href="tuiter/navigation.html">Tuiter</a></li>-->
+<!--  </ul>-->
 
   </body>
 </html>
